--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ author:
   email            : "the.umair.akram@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
+  medium           : "https://theumairakram.medium.com/"
   bitbucket        :
   codepen          :
   dribbble         :
