--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  kaggle           : "muhammadumairab"
 
 
 # Reading Files
