Disaster tweets classification project added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,8 @@ main:
   - title: "Work Experience"
     url: "/#-work-experience"
 
+  - title: "Projects"
+    url: "/#-projects"
+
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
