teaching section added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,5 +24,8 @@ main:
   - title: "Projects"
     url: "/#projects"
 
+  - title: "Teaching"
+    url: "/#teaching"
+
   - title: "Honors and Awards"
     url: "/#honors-and-awards"
