city and country updated

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Umair Akram"
   avatar           : "images/DP.png"
   bio              : "Machine Learning/AI/NLP/Computer Vision"
-  location         : "Faisalabad, Pakistan"
+  location         : "Karlskrona, Sweden"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=CvBm5PYAAAAJ"
